--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Robotics</title>
     <link rel='stylesheet' href='index.css'>
-    <link rel='stylesheet' href='flex_training.css'>
+    <link rel='stylesheet' href='flexbox.css'>
 </head>
 <body>
 
